@@ -2,9 +2,14 @@ package com.sprint.mission.discodeit.repository.jcf;
 
 import com.sprint.mission.discodeit.entity.User;
 import com.sprint.mission.discodeit.repository.UserRepository;
+import org.springframework.boot.autoconfigure.condition.ConditionalOnProperty;
+import org.springframework.stereotype.Repository;
 
 import java.util.*;
+import java.util.stream.Collectors;
 
+@Repository
+@ConditionalOnProperty(name = "discodeit.repository.type", havingValue = "jcf", matchIfMissing = true)
 public class JCFUserRepository implements UserRepository {
     private final Map<UUID, User> data;
 
@@ -15,21 +20,43 @@ public class JCFUserRepository implements UserRepository {
     @Override
     public User save(User user) {
         data.put(user.getId(), user);
-        return user; // 그대로 리턴 괜찮나? 조회해서 해야하나?
+        return user;
     }
 
     @Override
-    public Optional<User> findById(UUID userId) {
-        return Optional.ofNullable(data.get(userId)); // data.get(userId)만 하면 안되나?
+    public Optional<User> findById(UUID id) {
+        return Optional.ofNullable(data.get(id));
+    }
+
+    @Override
+    public Optional<User> findByName(String name) {
+        return data.values().stream()
+                .filter(user -> user.getName().equals(name))
+                .findAny();
     }
 
     @Override
     public List<User> findAll() {
-        return data.values().stream().toList();
+        return data.values().stream().collect(Collectors.toList());
     }
 
     @Override
-    public void delete(UUID userId) {
-        data.remove(userId);
+    public void deleteById(UUID id) {
+        data.remove(id);
+    }
+
+    @Override
+    public boolean existsById(UUID id) {
+        return data.values().stream().anyMatch(user -> user.getId().equals(id));
+    }
+
+    @Override
+    public boolean existsByName(String name) {
+        return data.values().stream().anyMatch(user -> user.getName().equals(name));
+    }
+
+    @Override
+    public boolean existsByEmail(String email) {
+        return data.values().stream().anyMatch(user -> user.getEmail().equals(email));
     }
 }
